Revision history for JSON-Schema-Draft201909

{{$NEXT}}
          - add infinite recursion detection

0.002     2020-05-27 22:28:15Z
          - fix incorrect prereq needed for tests
          - add support for $id and $anchor in single schema documents

0.001     2020-05-21 15:51:00Z
          - Initial release.