@@ -2,6 +2,8 @@ Revision history for JSON-Schema-Draft201909
 
 {{$NEXT}}
           - add infinite recursion detection
+          - process properties in sorted order, for consistent ordering of
+            results
 
 0.002     2020-05-27 22:28:15Z
           - fix incorrect prereq needed for tests
